--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                 <label for="discordProfile">Jūsų Discord Profilis:</label>
                 <div id="discordProfile">
                     <button id="discordLogin">🔑 Prisijungti su Discord</button>
+<button id="logoutButton">Log Out</button>
+
                 </div>
 
                 <label for="age">Kiek jums metų?</label>
