--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/gif" href="https://i.imgur.com/amma0ov.gif">
+<link rel="icon" type="image/gif" href="https://i.imgur.com/amma0ov.gif">
     <title>Miela Malonu</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,12 +14,8 @@
             <h2>Miela Malonu Aplikacija</h2>
             <p id="statusDisplay" class="status-offline">❌ Anketos: Uždarytos</p>
             <form id="applicationForm">
-                <label for="discordProfile">Jūsų Discord Profilis:</label>
-                <div id="discordProfile">
-                    <button id="discordLogin">🔑 Prisijungti su Discord</button>
-<button id="logoutButton">Log Out</button>
-
-                </div>
+                <label for="username">Jūsų Discord ID? (Parašius neteisinga ID su jumis nebus susisiekta):</label>
+                <input type="text" id="username" required>
 
                 <label for="age">Kiek jums metų?</label>
                 <input type="number" id="age" required>
@@ -51,7 +47,7 @@
                 <li>📜 Išsipisinėjimas = BLACKLIST</li>
                 <li>💬 Rašymas PM = BLACKLIST</li>
                 <li>📛 Pildymas kai uždarytos anketos = BLACKLIST</li>
-                <iframe src="https://canary.discord.com/widget?id=1325850250027597845&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+<iframe src="https://canary.discord.com/widget?id=1325850250027597845&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </ul>
         </div>
 
@@ -61,6 +57,7 @@
             <button id="statusButton">🔒 Status Control</button>
             <button id="blacklistButton">🚫 Pridėti Į Blacklist</button>
             <button id="removeButton">🚫 Pašalinti iš Blacklist</button>
+
         </div>
     </div>
 
