--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
         <div class="container">
             <h2>Miela Malonu Aplikacija</h2>
             <p id="statusDisplay" class="status-offline">❌ Anketos: Uždarytos</p>
+<div class="discord-auth-container">
+    <button id="discord-login">Login with Discord</button>
+    <div id="profile-container" style="display: none;"></div>
+</div>
+
+<form id="application-form">
+    <input type="hidden" id="username" name="username">
+    <button type="submit">Submit</button>
+</form>
+
             <form id="applicationForm">
                 <label for="username">Jūsų Discord ID? (Parašius neteisinga ID su jumis nebus susisiekta):</label>
                 <input type="text" id="username" required>
