--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="main-container">
         <!-- Application Form Container -->
         <div class="container">
-            <h2>Miela Malonu Aplikacija</h2>
+            <h2>Miela Malonu Aplikacija.</h2>
             <p id="statusDisplay" class="status-offline">❌ Anketos: Uždarytos</p>
 <div class="discord-auth-container">
     <button id="discord-login">Login with Discord</button>
