--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
         <!-- Application Form Container -->
         <div class="container">
             <h2>Miela Malonu Aplikacija.</h2>
-            <p id="statusDisplay" class="status-offline">Kraunama 🌐</p>
-<div class="discord-auth-container">
-    <button id="discord-login">Login with Discord</button>
+            <p id="statusDisplay" class="status-offline">KRAUNAMA</p>
+         <div class="discord-auth-container">
+    <button id="discord-login">🌐 Prisijunkite su Discord 🌐</button>
     <div id="profile-container" style="display: none;"></div>
 </div>
             <form id="applicationForm">
-                <label for="username">Jūsų Discord ID? (Parašius neteisinga ID su jumis nebus susisiekta):</label>
-                <input type="text" id="username" required>
-
                 <label for="age">Kiek jums metų?</label>
                 <input type="number" id="age" required>
 
