--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <div id="profile-container" style="display: none;"></div>
 </div>
             <form id="applicationForm">
+
+               <label for="age">Discord ID?</label>
+                <input type="number" id="age" hidden>
+
                 <label for="age">Kiek jums metų?</label>
                 <input type="number" id="age" required>
 
