--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <form id="applicationForm">
 
                <label for="age">Discord ID?</label>
-                <input type="number" id="age" hidden>
+                <input type="number" id="username" hidden>
 
                 <label for="age">Kiek jums metų?</label>
                 <input type="number" id="age" required>
