--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
             <form id="applicationForm">
 
-               <label for="age">Discord ID?</label>
+               <label for="username"></label>
                 <input type="number" id="username" hidden>
 
                 <label for="age">Kiek jums metų?</label>
