--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/gif" href="https://i.imgur.com/amma0ov.gif">
+<link href="https://discord.com/assets/ginto-nord.css" rel="stylesheet">
     <title>Miela Malonu</title>
     <link rel="stylesheet" href="style.css">
 </head>
