--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://discord.com/assets/ginto-nord.css" rel="stylesheet">
+<link href="https://discord.com/assets/6c6374bad0b0b6d204d8d6dc4a18d820.woff" rel="preload" as="font">
 <link rel="icon" type="image/gif" href="https://i.imgur.com/amma0ov.gif">
 <link href="https://discord.com/assets/ginto-nord.css" rel="stylesheet">
     <title>Miela Malonu</title>
