--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             <h2>Reikalavimai</h2>
             <ul class="rules-list">
                 <li>☠️ Minimalus amžius - 15 metų</li>
+                <li> 🌐 Privaloma būti discord serverije kitaip negalėsime priimti jūsų anketos <li>
+
+               <h3>Blacklist lentelė</h3>
                 <li>📜 Išsipisinėjimas = BLACKLIST</li>
                 <li>💬 Rašymas PM = BLACKLIST</li>
                 <li>📛 Pildymas kai uždarytos anketos = BLACKLIST</li>
