--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                 <li>💬 Rašymas PM = BLACKLIST</li>
                 <li>📛 Pildymas kai uždarytos anketos = BLACKLIST</li>
 <iframe src="https://canary.discord.com/widget?id=1325850250027597845&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+</div>
+
             </ul>
         </div>
 
@@ -71,6 +73,14 @@
 
         </div>
     </div>
+<div class="discord-invite">
+    <img id="serverIcon" src="" alt="Server Icon">
+    <h3 id="serverName">Server Name</h3>
+    <p id="onlineCount">Loading...</p>
+    <p id="memberCount">Loading...</p>
+    <a id="inviteLink" href="#" target="_blank">Join</a>
+</div>
+
 
     <script src="script.js"></script>
 </body>
