--- a/index.html
+++ b/index.html
@@ -47,19 +47,33 @@
             </form>
         </div>
 
-        <!-- Rules Container -->
-        <div class="rules-container">
+      <div class="rules-container">
             <h2>Reikalavimai</h2>
             <ul class="rules-list">
                 <li>☠️ Minimalus amžius - 15 metų</li>
-                <li> 🌐 Privaloma būti discord serverije kitaip negalėsime priimti jūsų anketos <li>
-
-               <h2>Blacklist lentelė</h2>
+                <li>📜 Išsipisinėjimas = BLACKLIST</li>
+                <li>💬 Rašymas PM = BLACKLIST</li>
+                <li>📛 Pildymas kai uždarytos anketos = BLACKLIST</li>
+                <h2>Blacklist lentelė</h2>
                 <li>📜 Išsipisinėjimas = BLACKLIST</li>
                 <li>💬 Rašymas PM = BLACKLIST</li>
                 <li>📛 Pildymas kai uždarytos anketos = BLACKLIST</li>
 <iframe src="https://canary.discord.com/widget?id=1325850250027597845&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </div>
+
+<div class="discord-invite">
+    <div class="invite-banner">
+        <img id="serverBanner" src="" alt="Server Banner">
+    </div>
+    <div class="invite-content">
+        <img id="serverIcon" src="" alt="Server Icon">
+        <div class="server-info">
+            <h3 id="serverName">Server Name</h3>
+            <p id="memberCount">Loading...</p>
+            <p id="onlineCount">Loading...</p>
+        </div>
+        <a id="inviteLink" href="#" target="_blank" class="join-button">Prisijungti</a>
+    </div>   
 
             </ul>
         </div>
