--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <li>📜 Išsipisinėjimas = BLACKLIST</li>
                 <li>💬 Rašymas PM = BLACKLIST</li>
                 <li>📛 Pildymas kai uždarytos anketos = BLACKLIST</li>
-
+<h2>Discord pakvietimas</h2>
 <div class="discord-invite">
     <div class="invite-banner">
         <img id="serverBanner" src="" alt="Server Banner">
