--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
             <h2>Reikalavimai</h2>
             <ul class="rules-list">
                 <li>☠️ Minimalus amžius - 15 metų</li>
-                <li>📜 Išsipisinėjimas = BLACKLIST</li>
-                <li>💬 Rašymas PM = BLACKLIST</li>
-                <li>📛 Pildymas kai uždarytos anketos = BLACKLIST</li>
+               <li>🌐 Butina prisijungti prie discord</li>
                 <h2>Blacklist lentelė</h2>
                 <li>📜 Išsipisinėjimas = BLACKLIST</li>
                 <li>💬 Rašymas PM = BLACKLIST</li>
