--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Application Form Container -->
         <div class="container">
             <h2>Miela Malonu Aplikacija.</h2>
-            <p id="statusDisplay" class="status-offline">KRAUNAMA</p>
+            
          <div class="discord-auth-container">
     <button id="discord-login">🌐 Prisijunkite su Discord 🌐</button>
     <div id="profile-container" style="display: none;"></div>
@@ -48,6 +48,8 @@
         </div>
 
       <div class="rules-container">
+            <h2>Statusas</h2>
+           <p id="statusDisplay" class="status-offline">KRAUNAMA</p>
             <h2>Reikalavimai</h2>
             <ul class="rules-list">
                 <li>☠️ Minimalus amžius - 15 metų</li>
