--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
 
         <!-- Admin Panel -->
-        <div class="admin-panel">
+        <div class="admin-panel" style="display: none;">
              <h2>Admin Panel</h2>
             <button id="statusButton">🔒 Status Control</button>
             <button id="blacklistButton">🚫 Pridėti Į Blacklist</button>
