--- a/index.html
+++ b/index.html
@@ -87,5 +87,6 @@
 
 
     <script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </body>
 </html>
