--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <label for="isp">Ar išpirktumėte įspėjimą, jei jis būtų gautas dėl jūsų kaltės?</label>
                 <textarea id="isp" required></textarea>
 
-                <button type="submit">Pateikti</button>
+                <button type="submit" id="submitButton">Pateikti</button>
             </form>
         </div>
 
