--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h2>Miela Malonu Aplikacija.</h2>
             
          <div class="discord-auth-container">
-   
+    <button id="discord-login">🌐 Prisijunkite su Discord 🌐</button>
     <div id="profile-container" style="display: none;"></div>
 </div>
             <form id="applicationForm">
